// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingLayout Snapshots should match snapshot in loading state 1`] = `
<div
  class="min-h-screen bg-surface-dark"
>
  <header
    class="ios-card border-b border-gray-200/50"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
    >
      <div
        class="flex justify-between items-center py-6"
      >
        <div
          class="flex items-center space-x-4"
        >
          <button
            aria-label="Go back"
            class="ios-button-secondary p-2 text-text-secondary hover:text-text-primary transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
            disabled=""
          >
            <svg
              class="lucide lucide-arrow-left w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 19-7-7 7-7"
              />
              <path
                d="M19 12H5"
              />
            </svg>
          </button>
          <a
            class="flex items-center"
            href="/discovery"
          >
            <div
              class="w-8 h-8 bg-aqua rounded-lg flex items-center justify-center"
            >
              <span
                class="text-white font-bold text-sm"
              >
                L
              </span>
            </div>
            <span
              class="ml-2 text-xl font-semibold text-primary"
            >
              Link
            </span>
          </a>
        </div>
        <div
          class="hidden sm:block"
        >
          <p
            class="text-sm text-secondary"
          >
            Welcome, 
            John
            !
          </p>
        </div>
        <div
          class="flex items-center"
        />
      </div>
    </div>
  </header>
  <main
    class="flex-1"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6"
    >
      <div>
        Loading State Content
      </div>
    </div>
  </main>
  <footer
    class="bg-surface-card border-t border-gray-200 mt-auto"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4"
    >
      <div
        class="flex justify-center items-center space-x-6 text-sm text-muted"
      >
        <a
          class="hover:text-primary transition-colors"
          href="/help"
        >
          Help
        </a>
        <a
          class="hover:text-primary transition-colors"
          href="/privacy"
        >
          Privacy
        </a>
        <a
          class="hover:text-primary transition-colors"
          href="/terms"
        >
          Terms
        </a>
      </div>
    </div>
  </footer>
</div>
`;

exports[`OnboardingLayout Snapshots should match snapshot with back button visible 1`] = `
<div
  class="min-h-screen bg-surface-dark"
>
  <header
    class="ios-card border-b border-gray-200/50"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
    >
      <div
        class="flex justify-between items-center py-6"
      >
        <div
          class="flex items-center space-x-4"
        >
          <button
            aria-label="Go back"
            class="ios-button-secondary p-2 text-text-secondary hover:text-text-primary transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
          >
            <svg
              class="lucide lucide-arrow-left w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 19-7-7 7-7"
              />
              <path
                d="M19 12H5"
              />
            </svg>
          </button>
          <a
            class="flex items-center"
            href="/discovery"
          >
            <div
              class="w-8 h-8 bg-aqua rounded-lg flex items-center justify-center"
            >
              <span
                class="text-white font-bold text-sm"
              >
                L
              </span>
            </div>
            <span
              class="ml-2 text-xl font-semibold text-primary"
            >
              Link
            </span>
          </a>
        </div>
        <div
          class="hidden sm:block"
        >
          <p
            class="text-sm text-secondary"
          >
            Welcome, 
            John
            !
          </p>
        </div>
        <div
          class="flex items-center"
        />
      </div>
    </div>
  </header>
  <main
    class="flex-1"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6"
    >
      <div>
        Test Content with Back Button
      </div>
    </div>
  </main>
  <footer
    class="bg-surface-card border-t border-gray-200 mt-auto"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4"
    >
      <div
        class="flex justify-center items-center space-x-6 text-sm text-muted"
      >
        <a
          class="hover:text-primary transition-colors"
          href="/help"
        >
          Help
        </a>
        <a
          class="hover:text-primary transition-colors"
          href="/privacy"
        >
          Privacy
        </a>
        <a
          class="hover:text-primary transition-colors"
          href="/terms"
        >
          Terms
        </a>
      </div>
    </div>
  </footer>
</div>
`;

exports[`OnboardingLayout Snapshots should match snapshot with default props 1`] = `
<div
  class="min-h-screen bg-surface-dark"
>
  <header
    class="ios-card border-b border-gray-200/50"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
    >
      <div
        class="flex justify-between items-center py-6"
      >
        <div
          class="flex items-center space-x-4"
        >
          <button
            aria-label="Go back"
            class="ios-button-secondary p-2 text-text-secondary hover:text-text-primary transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
          >
            <svg
              class="lucide lucide-arrow-left w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 19-7-7 7-7"
              />
              <path
                d="M19 12H5"
              />
            </svg>
          </button>
          <a
            class="flex items-center"
            href="/discovery"
          >
            <div
              class="w-8 h-8 bg-aqua rounded-lg flex items-center justify-center"
            >
              <span
                class="text-white font-bold text-sm"
              >
                L
              </span>
            </div>
            <span
              class="ml-2 text-xl font-semibold text-primary"
            >
              Link
            </span>
          </a>
        </div>
        <div
          class="hidden sm:block"
        >
          <p
            class="text-sm text-secondary"
          >
            Welcome, 
            John
            !
          </p>
        </div>
        <div
          class="flex items-center"
        />
      </div>
    </div>
  </header>
  <main
    class="flex-1"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6"
    >
      <div>
        Test Content
      </div>
    </div>
  </main>
  <footer
    class="bg-surface-card border-t border-gray-200 mt-auto"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4"
    >
      <div
        class="flex justify-center items-center space-x-6 text-sm text-muted"
      >
        <a
          class="hover:text-primary transition-colors"
          href="/help"
        >
          Help
        </a>
        <a
          class="hover:text-primary transition-colors"
          href="/privacy"
        >
          Privacy
        </a>
        <a
          class="hover:text-primary transition-colors"
          href="/terms"
        >
          Terms
        </a>
      </div>
    </div>
  </footer>
</div>
`;

exports[`OnboardingLayout Snapshots should match snapshot with user greeting 1`] = `
<div
  class="min-h-screen bg-surface-dark"
>
  <header
    class="ios-card border-b border-gray-200/50"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
    >
      <div
        class="flex justify-between items-center py-6"
      >
        <div
          class="flex items-center space-x-4"
        >
          <button
            aria-label="Go back"
            class="ios-button-secondary p-2 text-text-secondary hover:text-text-primary transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
          >
            <svg
              class="lucide lucide-arrow-left w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 19-7-7 7-7"
              />
              <path
                d="M19 12H5"
              />
            </svg>
          </button>
          <a
            class="flex items-center"
            href="/discovery"
          >
            <div
              class="w-8 h-8 bg-aqua rounded-lg flex items-center justify-center"
            >
              <span
                class="text-white font-bold text-sm"
              >
                L
              </span>
            </div>
            <span
              class="ml-2 text-xl font-semibold text-primary"
            >
              Link
            </span>
          </a>
        </div>
        <div
          class="hidden sm:block"
        >
          <p
            class="text-sm text-secondary"
          >
            Welcome, 
            John
            !
          </p>
        </div>
        <div
          class="flex items-center"
        />
      </div>
    </div>
  </header>
  <main
    class="flex-1"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6"
    >
      <div>
        Personalized Content
      </div>
    </div>
  </main>
  <footer
    class="bg-surface-card border-t border-gray-200 mt-auto"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4"
    >
      <div
        class="flex justify-center items-center space-x-6 text-sm text-muted"
      >
        <a
          class="hover:text-primary transition-colors"
          href="/help"
        >
          Help
        </a>
        <a
          class="hover:text-primary transition-colors"
          href="/privacy"
        >
          Privacy
        </a>
        <a
          class="hover:text-primary transition-colors"
          href="/terms"
        >
          Terms
        </a>
      </div>
    </div>
  </footer>
</div>
`;
